@@ -1,3 +1,9 @@
+2013-04-15  Tassilo Horn  <tsdh@gnu.org>
+
+	* textmodes/reftex-vars.el (reftex-label-regexps): New defcustom.
+
+	* textmodes/reftex.el (reftex-compile-variables): Use it.
+
 2013-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* files.el (normal-mode): Only use default major-mode if no other mode
